style: fixed some layout/overlap issues and stuttering at the end of the track.

--- a/src/music-visualiser/equalizer-components.module.css
+++ b/src/music-visualiser/equalizer-components.module.css
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 10002;
+  z-index: 10;
 }
 
 .eqOverlayDragging {
